# shopifyql-py

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  shopifyql-analytics-guide.md
.github/workflows/: cla.yml  lint.yml  publish.yml  test.yml
src/shopifyql/: __init__.py  auth.py  client.py  limiter.py  results.py
tests/: test_client.py
